# phd-finder

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: db.py  freshness.py  http_client.py  llm_fallback.py  main.py  schema.py  service.py  sources.yaml
src/adapters/: epfl.py  ethz.py
tests/: test_db.py  test_schema.py
