[project]
name = "phd-lab-scraper"
version = "0.1.0"
description = "Collect ETHZ and EPFL labs and website links"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
]

[project.scripts]
phd-lab-scraper = "src.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

